--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
             <h2>Get in touch</h2>
             <div class="contact-card_info-wrapper">
                 <div class="contact-card_inner">
-                    
+                    <p>lorem</p>
                 </div>
                 <div class="contact-card_inner"></div>
             </div>
