--- a/index.html
+++ b/index.html
@@ -354,9 +354,20 @@
             <h2>Get in touch</h2>
             <div class="contact-card_info-wrapper">
                 <div class="contact-card_inner">
-                    <p>lorem</p>
+                    <ul>
+                        <li><a href="https://goo.gl/maps/MgRmi53R5VooEAP56" target="_blank" rel="noreferrer nofollow" title="adress"><!-- svg -->91 Nolan Extensions Suite 670</a></li>
+                        <li><a href="tel:+0013568682454" target="_blank" title="phone"><!-- svg -->+001 356-868-2454</a></li>
+                        <li><a href="mailto:gahuy93@gmail.com" target="_blank" title="email"><!-- svg -->gahuy93@gmail.com</a></li>
+                        <li><!-- svg -->From 07:05AM to 19:30PM</li>
+                    </ul>
                 </div>
-                <div class="contact-card_inner"></div>
+                <div class="contact-card_inner">
+                    <form action="#" method="POST" name="userInfo">
+                        <input type="text" placeholder="Your Name" id="userName">
+                        <input type="email" name="userMail" id="userMail" placeholder="Email">
+                        <button type="submit" id="sendUserInfo">SUBMIT</button>
+                    </form>
+                </div>
             </div>
         </div>           
 
