All images lazy. Done footer and form

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </h2>
                 <div class="projects_example">
                     <div class="projects_image-wrap">
-                        <img src="assets/images/projectimage1.png" alt="picture">
+                        <img class="lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw==" data-src="assets/images/projectimage1.png" alt="picture">
                     </div>
                     <div class="projects_text-wrap">
                         <div class="projects_example-title1">
@@ -154,7 +154,7 @@
                 </div>
                 <div class="projects_example reverse">
                     <div class="projects_image-wrap reverse">
-                        <img src="assets/images/projectimage2.png" alt="picture">
+                        <img class="lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw==" data-src="assets/images/projectimage2.png" alt="picture">
                     </div>
                     <div class="projects_text-wrap reverse">
                         <div class="projects_example-title1">
@@ -191,7 +191,7 @@
                 <ul class="news_list" id="horisontal_slider">
                     <li class="news_list-item">
                         <a href="#" class="news_list-item_link">
-                            <img src="assets/images/news-1.png" alt="news-image">
+                            <img class="lazy" data-src="assets/images/news-1.png" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw==" alt="news-image">
                         </a>
                         <div class="news_list-item_text-wrap">
                             <a href="#" class="news_list-item_title">
@@ -208,16 +208,16 @@
                             </p>
                             <div class="news_list-item-author-wrap">
                                 <img src="assets/images/isaac_.png" alt="#">
-                                <span>
+                                <div>
                                     <div class="news_list-item-author">Isaac Dunn</div>
                                     <div class="news_list-item-date">09 Feb 2017</div>
-                                </span>
+                                </div>
                             </div>
                         </div>
                     </li>
                     <li class="news_list-item">
                         <a href="#" class="news_list-item_link">
-                            <img src="assets/images/news-2.png" alt="news-image">
+                            <img class="lazy" data-src="assets/images/news-2.png" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw==" alt="news-image">
                         </a>
                         <div class="news_list-item_text-wrap">
                             <a href="#" class="news_list-item_title">
@@ -231,16 +231,16 @@
                             </p>
                             <div class="news_list-item-author-wrap">
                                 <img src="assets/images/dominic.png" alt="#">
-                                <span>
+                                <div>
                                     <div class="news_list-item-author">Dominic Freeman</div>
                                     <div class="news_list-item-date">24 Apr 2017</div>
-                                </span>
+                                </div>
                             </div>
                         </div>
                     </li>
                     <li class="news_list-item">
                         <a href="#" class="news_list-item_link">
-                            <img src="assets/images/news-3.png" alt="news-image">
+                            <img class="lazy" data-src="assets/images/news-3.png" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw==" alt="news-image">
                         </a>
                         <div class="news_list-item_text-wrap">
                             <a href="#" class="news_list-item_title">
@@ -254,16 +254,16 @@
                             </p>
                             <div class="news_list-item-author-wrap">
                                 <img src="assets/images/alice.png" alt="#">
-                                <span>
+                                <div>
                                     <div class="news_list-item-author">Alice Ward</div>
                                     <div class="news_list-item-date">30 Dec 2017</div>
-                                </span>
+                                </div>
                             </div>
                         </div>
                     </li>
                     <li class="news_list-item">
                         <a href="#" class="news_list-item_link">
-                            <img src="assets/images/news-2.png" alt="news-image">
+                            <img class="lazy" data-src="assets/images/news-2.png" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw==" alt="news-image">
                         </a>
                         <div class="news_list-item_text-wrap">
                             <a href="#" class="news_list-item_title">
@@ -277,16 +277,18 @@
                             </p>
                             <div class="news_list-item-author-wrap">
                                 <img src="assets/images/dominic.png" alt="#">
-                                <span>
+                                <div>
                                     <div class="news_list-item-author">Isaac Dunn</div>
                                     <div class="news_list-item-date">09 Feb 2017</div>
-                                </span>
+                                </div>
                             </div>
                         </div>
                     </li>
                     <li class="news_list-item">
                         <a href="#" class="news_list-item_link">
-                            <img src="assets/images/news-2.png" alt="news-image">
+                            <img class="lazy" data-src="assets/images/news-2.png"
+                                src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw=="
+                                alt="news-image">
                         </a>
                         <div class="news_list-item_text-wrap">
                             <a href="#" class="news_list-item_title">
@@ -304,10 +306,10 @@
                             </p>
                             <div class="news_list-item-author-wrap">
                                 <img src="assets/images/dominic.png" alt="#">
-                                <span>
+                                <div>
                                     <div class="news_list-item-author">Isaac Dunn</div>
                                     <div class="news_list-item-date">09 Feb 2017</div>
-                                </span>
+                                </div>
                             </div>
                         </div>
                     </li>
@@ -350,26 +352,7 @@
         <div id="map">
                 
         </div> 
-        <div class="cantact-card">
-            <h2>Get in touch</h2>
-            <div class="contact-card_info-wrapper">
-                <div class="contact-card_inner">
-                    <ul>
-                        <li><a href="https://goo.gl/maps/MgRmi53R5VooEAP56" target="_blank" rel="noreferrer nofollow" title="adress"><!-- svg -->91 Nolan Extensions Suite 670</a></li>
-                        <li><a href="tel:+0013568682454" target="_blank" title="phone"><!-- svg -->+001 356-868-2454</a></li>
-                        <li><a href="mailto:gahuy93@gmail.com" target="_blank" title="email"><!-- svg -->gahuy93@gmail.com</a></li>
-                        <li><!-- svg -->From 07:05AM to 19:30PM</li>
-                    </ul>
-                </div>
-                <div class="contact-card_inner">
-                    <form action="#" method="POST" name="userInfo">
-                        <input type="text" placeholder="Your Name" id="userName">
-                        <input type="email" name="userMail" id="userMail" placeholder="Email">
-                        <button type="submit" id="sendUserInfo">SUBMIT</button>
-                    </form>
-                </div>
-            </div>
-        </div>           
+                   
 
     </main>
     <footer class="footer lazy-bg" data-src="assets/images/backgroundfooter.png">
@@ -414,6 +397,49 @@
                         </a>
                     </li>                    
                 </ul>
+            </div>
+        </div>
+        <div class="contact-card lazy-bg" data-src="assets/images/cardbackground.png">
+            <h2 class="contact-card_title title">Get in touch</h2>
+            <div class="contact-card_info-wrapper">
+                <ul class="contact-card_list">
+                    <li class="contact-card_list-item">
+                        <a href="https://goo.gl/maps/MgRmi53R5VooEAP56" target="_blank" rel="noreferrer nofollow"
+                            title="adress">
+                            <svg>
+                                <use xlink:href="assets/images/svg/sprite.svg#location"></use>
+                            </svg>
+                            91 Nolan Extensions Suite 670
+                        </a>
+                    </li>
+                    <li class="contact-card_list-item">
+                        <a href="tel:+0013568682454" target="_blank" title="phone">
+                            <svg>
+                                <use xlink:href="assets/images/svg/sprite.svg#phone"></use>
+                            </svg>
+                            +001 356-868-2454
+                        </a>
+                    </li>
+                    <li class="contact-card_list-item">
+                        <a href="mailto:gahuy93@gmail.com" target="_blank" title="email">
+                            <svg>
+                                <use xlink:href="assets/images/svg/sprite.svg#inbox"></use>
+                            </svg>
+                            gahuy93@gmail.com
+                        </a>
+                    </li>
+                    <li class="contact-card_list-item">
+                        <svg>
+                            <use xlink:href="assets/images/svg/sprite.svg#clock"></use>
+                        </svg>
+                        From 07:05AM to 19:30PM
+                    </li>
+                </ul>
+                <form class="contact-card_form" action="#" method="POST" name="userInfo">
+                    <input type="text" placeholder="Your Name" id="userName">
+                    <input type="email" name="userMail" id="userMail" placeholder="Email">
+                    <button class="btn btn-submit" type="submit" id="sendUserInfo">SUBMIT</button>
+                </form>
             </div>
         </div>
     </footer>
