--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
     <link rel="stylesheet" href="assets/js/plugins/leaflet/leaflet.css">
     <link rel="stylesheet" href="assets/css/style.min.css">
     <title>Monticello</title>
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#9f00a7">
+    <meta name="theme-color" content="#ffffff">
+    <!-- robots -->
+    <meta name="robots" content="all">
+    <meta name="revisit-after" content="1 days">
+    <!-- og -->
+    <meta property="og:locale" content="uk_UA">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Monticello">
+    <meta property="og:description" content="We make the world`s beautiful every day.">
+    <meta name="description" content="Increasing prosperity in our lives can be accomplished by having the right frame of mind.">
+    <meta property="og:url" content="https://gadkiy.github.io/Examm/">
+    <meta property="og:site_name" content="Monticello">
+    <meta property="og:image:width" content="600">
+    <meta property="og:image:height" content="600">
+    <meta property="og:image" content="https://gadkiy.github.io/Examm/assets/imgages/siteimage.png">
 </head>
 <body>
     <main>
