At the middle of adaptive

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/lg-zoom.css">
     <link rel="stylesheet" href="assets/css/lg-thumbnail.css">
     <link rel="stylesheet" href="assets/js/plugins/leaflet/leaflet.css">
+    <link rel="stylesheet" href="assets/css/hamburger.min.css">
     <link rel="stylesheet" href="assets/css/style.min.css">
     <title>Monticello</title>
     <!-- favicon -->
@@ -91,6 +92,11 @@
                         </a>
                     </li>                    
                 </ul>
+                <button class="hamburger hamburger--emphatic" type="button">
+                    <span class="hamburger-box">
+                        <span class="hamburger-inner"></span>
+                    </span>
+                </button>
             </div>
         </header>
         <section id="header_slider" class="header_slider">
