--- a/index.html
+++ b/index.html
@@ -480,9 +480,9 @@
     <script src="assets/js/plugins/intersection-observer.js"></script>
     <script src="assets/js/plugins/lazyload.js"></script>
     <script src="assets/js/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/plugins/lightgallery.min.js"></script>
-    <script src="assets/js/plugins/lg-thumbnail.min.js"></script>
-    <script src="assets/js/plugins/lg-zoom.min.js"></script>
+    <script src="assets/js/plugins/dist/lightgallery.umd.js"></script>
+    <script src="assets/js/plugins/dist/plugins/thumbnail/lg-thumbnail.umd.js"></script>
+    <script src="assets/js/plugins/dist/plugins/zoom/lg-zoom.umd.js"></script>
     <script src="assets/js/plugins/lightslider.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
