--- a/index.html
+++ b/index.html
@@ -352,24 +352,29 @@
                 <div class="gallery_wrap" id="lightgallery">
                     <div class="gallery_inner">
                         <a href="assets/images/scott.png">
+                            <span>360&deg;</span>
                             <img class="lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw=="
                                 alt="scott" data-src="assets/images/scott.png">
                         </a>
                     </div>
                     <div class="gallery_inner gallery_inner_second">
                         <a href="assets/images/photos.png">
+                            <span>360&deg;</span>
                             <img class="lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw=="
                                 alt="photos" data-src="assets/images/photos.png">
                         </a>
                         <a href="assets/images/echo.png">
+                            <span>360&deg;</span>
                             <img class="lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw=="
                                 alt="echo" data-src="assets/images/echo.png">
                         </a>
                         <a href="assets/images/fuse.png">
+                            <span>360&deg;</span>
                             <img class="lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw=="
                                 alt="fuse" data-src="assets/images/fuse.png">
                         </a>
                         <a class="item" href="assets/images/tu.png">
+                            <span>360&deg;</span>
                             <img class="lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw=="
                                 alt="tu" data-src="assets/images/tu.png">
                         </a>
