--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
                     </ul>
                 </nav>
                 <ul class="links">
-                    <li class="links-item" target="_blank" rel="noreferrer nofollow" title="facebook">
-                        <a href="https://www.facebook.com/">
+                    <li class="links-item" >
+                        <a href="https://www.facebook.com/" target="_blank" rel="noreferrer nofollow" title="facebook">
                             <svg>
                                 <use xlink:href="assets/images/svg/sprite.svg#facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="links-item" target="_blank" rel="noreferrer nofollow" title="twitter">
-                        <a href="https://twitter.com/?lang=ru">
+                    <li class="links-item" >
+                        <a href="https://twitter.com/?lang=ru" target="_blank" rel="noreferrer nofollow" title="twitter">
                             <svg>
                                 <use xlink:href="assets/images/svg/sprite.svg#twitter"></use>
                             </svg>
@@ -410,15 +410,15 @@
                 </div>
             </div>
                 <ul class="links">
-                    <li class="links-item" target="_blank" rel="noreferrer nofollow" title="facebook">
-                        <a href="https://www.facebook.com/">
+                    <li class="links-item">
+                        <a href="https://www.facebook.com/"  target="_blank" rel="noreferrer nofollow" title="facebook">
                             <svg>
                                 <use xlink:href="assets/images/svg/sprite.svg#facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="links-item" target="_blank" rel="noreferrer nofollow" title="twitter">
-                        <a href="https://twitter.com/?lang=ru">
+                    <li class="links-item">
+                        <a href="https://twitter.com/?lang=ru" target="_blank" rel="noreferrer nofollow" title="twitter">
                             <svg>
                                 <use xlink:href="assets/images/svg/sprite.svg#twitter"></use>
                             </svg>
