--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
                         Simple & Modern
                     </h2>
                     <p class="header_slider-item-description">
-                        We make the world`s beautiful every day
+                        Lorem ipsum dolor sit amet consectetur adipisicing.
                     </p>
                     <a class="scroll scroll-round" href="#projects"></a>
                 </li>
                 <li class="header_slider-item lazy-bg" data-src="assets/images/sliderbackground.png">
                     <h2 class="header_slider-item-title">
-                        Simple & Modern
+                        Lorem, ipsum.
                     </h2>
                     <p class="header_slider-item-description">
                         We make the world`s beautiful every day
@@ -139,7 +139,7 @@
                 </li>
                 <li class="header_slider-item lazy-bg" data-src="assets/images/sliderbackground.png">
                     <h2 class="header_slider-item-title">
-                        Simple & Modern
+                        Lorem, ipsum.
                     </h2>
                     <p class="header_slider-item-description">
                         We make the world`s beautiful every day
