--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/font.css">
     <link rel="stylesheet" href="assets/css/lightslider.min.css">
-    <link rel="stylesheet" href="assets/css/lightgallery.css">
-    <link rel="stylesheet" href="assets/css/lg-zoom.css">
-    <link rel="stylesheet" href="assets/css/lg-thumbnail.css">
+    <link rel="stylesheet" href="assets/js/plugins/dist/css/lightgallery-bundle.min.css">
     <link rel="stylesheet" href="assets/js/plugins/leaflet/leaflet.css">
     <link rel="stylesheet" href="assets/css/hamburger.min.css">
     <link rel="stylesheet" href="assets/css/style.min.css">
@@ -351,24 +349,24 @@
                 <h2 class="gallery_title title">Gallery</h2>
                 <div class="gallery_wrap" id="lightgallery">
                     <div class="gallery_inner">
-                        <a href="assets/images/scott.png">
+                        <a class="item" href="assets/images/scott.png">
                             <span>360&deg;</span>
                             <img class="lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw=="
                                 alt="scott" data-src="assets/images/scott.png">
                         </a>
                     </div>
                     <div class="gallery_inner gallery_inner_second">
-                        <a href="assets/images/photos.png">
+                        <a class="item" href="assets/images/photos.png">
                             <span>360&deg;</span>
                             <img class="lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw=="
                                 alt="photos" data-src="assets/images/photos.png">
                         </a>
-                        <a href="assets/images/echo.png">
+                        <a class="item" href="assets/images/echo.png">
                             <span>360&deg;</span>
                             <img class="lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw=="
                                 alt="echo" data-src="assets/images/echo.png">
                         </a>
-                        <a href="assets/images/fuse.png">
+                        <a class="item" href="assets/images/fuse.png">
                             <span>360&deg;</span>
                             <img class="lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw=="
                                 alt="fuse" data-src="assets/images/fuse.png">
@@ -481,13 +479,12 @@
 
 
 
+    <script src="assets/js/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/plugins/dist/lightgallery.min.js"></script>
+    <script src="assets/js/plugins/dist/plugins/zoom/lg-zoom.min.js"></script>
     <script src="assets/js/plugins/leaflet/leaflet.js"></script>
     <script src="assets/js/plugins/intersection-observer.js"></script>
     <script src="assets/js/plugins/lazyload.js"></script>
-    <script src="assets/js/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/plugins/dist/lightgallery.umd.js"></script>
-    <script src="assets/js/plugins/dist/plugins/thumbnail/lg-thumbnail.umd.js"></script>
-    <script src="assets/js/plugins/dist/plugins/zoom/lg-zoom.umd.js"></script>
     <script src="assets/js/plugins/lightslider.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
